--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "feather-command-init": "^0.1.3",
+    "feather-command-switch": "^0.1.0"
+  }
 }
