--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "feather-command-init": "^0.1.3",
-    "feather-command-switch": "^0.1.0"
+    "feather-command-switch": "^0.1.0",
+    "fis3": "^3.3.15"
   }
 }
