--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-	"name": "feather2",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"bin": {
-		"feather2": "bin/feather"
-	},
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"feather-command-init": "^0.1.3",
-		"feather-command-switch": "^0.1.0",
-		"fis3": "^3.3.15",
-		"liftoff": "^2.2.0",
-		"minimist": "^1.2.0"
-	}
+  "name": "feather2",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "bin": {
+    "feather2": "bin/feather"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "feather-command-init": "^0.1.3",
+    "feather-command-switch": "^0.1.0",
+    "fis-parser-less": "^0.1.3",
+    "fis3": "^3.3.15",
+    "liftoff": "^2.2.0",
+    "minimist": "^1.2.0"
+  }
 }
