--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fis-parser-less": "^0.1.3",
     "fis3": "^3.3.15",
     "liftoff": "^2.2.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "uglify-js": "^2.6.1"
   }
 }
