--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "node_modules/feather2-preprocessor-analyse"]
 	path = node_modules/feather2-preprocessor-analyse
 	url = https://github.com/feather-team/feather2-preprocessor-analyse.git
+[submodule "node_modules/feather2-packager-map"]
+	path = node_modules/feather2-packager-map
+	url = https://github.com/feather-team/feather2-packager-map.git
+[submodule "node_modules/feather2-postpackager-runtime"]
+	path = node_modules/feather2-postpackager-runtime
+	url = https://github.com/feather-team/feather2-postpackager-runtime.git
