--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "feather-postprocessor-inline-compress": "^0.1.3",
     "fis-parser-less": "^0.1.3",
     "fis3": "^3.3.15",
+    "fis3-server-php": "0.0.6",
     "liftoff": "^2.2.0",
     "minimist": "^1.2.0",
     "uglify-js": "^2.6.1"
