--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feather2",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -16,9 +16,9 @@
     "feather-command-switch": "^0.1.0",
     "feather-optimizer-htmlmin": "^0.1.2",
     "feather-postprocessor-inline-compress": "^0.1.3",
+    "fis-command-server": "^0.7.7",
     "fis-parser-less": "^0.1.3",
     "fis3": "^3.3.15",
-    "fis3-server-php": "0.0.6",
     "liftoff": "^2.2.0",
     "minimist": "^1.2.0",
     "uglify-js": "^2.6.1"
