--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "node_modules/feather2-postpackager-runtime"]
 	path = node_modules/feather2-postpackager-runtime
 	url = https://github.com/feather-team/feather2-postpackager-runtime.git
+[submodule "node_modules/feather2-command-init"]
+	path = node_modules/feather2-command-init
+	url = https://github.com/feather-team/feather2-command-init.git
