--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "feather-command-switch": "^0.1.0",
     "feather-optimizer-htmlmin": "^0.1.2",
-    "feather-postprocessor-inline-compress": "^0.1.3",
+    "feather-postprocessor-inline-compress": "~1.0.0",
     "fis-command-server": "^0.7.7",
     "fis-parser-less": "^0.1.3",
     "fis3": "^3.3.15",
