--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "node_modules/feather2-hook-components"]
 	path = node_modules/feather2-hook-components
 	url = https://github.com/feather-team/feather2-hook-components.git
+[submodule "node_modules/feather2-spriter-cssspriters"]
+	path = node_modules/feather2-spriter-cssspriters
+	url = https://github.com/feather-team/feather2-spriter-cssspriters.git
