--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "node_modules/feather2-spriter-cssspriters"]
 	path = node_modules/feather2-spriter-cssspriters
 	url = https://github.com/feather-team/feather2-spriter-cssspriters.git
+[submodule "node_modules/feather2-deploy-default"]
+	path = node_modules/feather2-deploy-default
+	url = https://github.com/feather-team/feather2-deploy-default.git
