--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "feather2",
   "version": "0.1.0",
-  "description": "",
+  "description": "feather2.0",
   "main": "index.js",
   "bin": {
     "feather2": "bin/feather"
@@ -20,6 +20,16 @@
     "fis3": "^3.3.15",
     "liftoff": "^2.2.0",
     "minimist": "^1.2.0",
-    "uglify-js": "^2.6.1"
+    "uglify-js": "^2.6.1",
+    "feather2-command-init": "~1.0.0",
+    "feather2-command-revert": "~1.0.0",
+    "feather2-hook-components": "~1.0.0",
+    "feather2-preprocessor-analyse": "~1.0.0",
+    "feather2-postprocessor-analyse": "~1.0.0",
+    "feather2-packager-map": "~1.0.0",
+    "feather2-spriter-csssprites": "~1.0.0",
+    "feather2-postpackager-cleancss": "~1.0.0",
+    "feather2-postpackager-runtime": "~1.0.0",
+    "feather2-deploy-default": "~1.0.0"
   }
 }
