--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "jsyczhanghao@sina.com",
   "license": "ISC",
   "dependencies": {
     "feather-command-switch": "^0.1.0",
