--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "jsyczhanghao@sina.com",
   "license": "ISC",
   "dependencies": {
-    "feather-command-switch": "^0.1.0",
+    "feather2-command-switch": "^0.1.0",
     "feather-optimizer-htmlmin": "^0.1.2",
     "feather-postprocessor-inline-compress": "~1.0.0",
     "fis-command-server": "^0.7.7",
