--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feather2",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "feather2.0",
   "main": "index.js",
   "bin": {
@@ -19,7 +19,7 @@
     "feather2-command-switch": "~1.0.0",
     "feather-optimizer-htmlmin": "^0.1.2",
     "feather-postprocessor-inline-compress": "~1.0.0",
-    "fis-command-server": "^0.7.7",
+    "fis3-server-php": "0.0.6",
     "fis-parser-less": "^0.1.3",
     "fis3": "^3.3.15",
     "liftoff": "^2.2.0",
