--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "feather2-command-revert": "~1.0.0",
     "feather2-command-switch": "~1.0.0",
     "feather2-deploy-default": "~1.0.0",
-    "feather2-hook-components": "~1.0.0",
     "feather2-packager-map": "~1.0.0",
     "feather2-postpackager-cleancss": "~1.0.0",
     "feather2-postpackager-runtime": "~1.0.0",
@@ -30,7 +29,7 @@
     "feather2-preprocessor-analyse": "~1.0.0",
     "feather2-spriter-csssprites": "~1.0.0",
     "fis-parser-less": "^0.1.3",
-    "fis3": "^3.3.15",
+    "fis3": "3.3.30",
     "fis3-deploy-ftp-umu": "^0.1.7",
     "fis3-server-php": "0.0.6",
     "liftoff": "^2.2.0",
