--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,12 @@
 [submodule "node_modules/feather2-preprocessor-analyse"]
 	path = node_modules/feather2-preprocessor-analyse
 	url = https://github.com/feather-team/feather2-preprocessor-analyse.git
+[submodule "node_modules/feather2-postpackager-loader"]
+	path = node_modules/feather2-postpackager-loader
+	url = https://github.com/feather-team/feather2-postpackager-loader.git
+[submodule "node_modules/feather2-prepackager-framework"]
+	path = node_modules/feather2-prepackager-framework
+	url = https://github.com/feather-team/feather2-prepackager-framework.git
+[submodule "node_modules/feather2-server-node"]
+	path = node_modules/feather2-server-node
+	url = https://github.com/feather-team/feather2-server-node.git
