--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "node_modules/feather2-server-node"]
 	path = node_modules/feather2-server-node
 	url = https://github.com/feather-team/feather2-server-node.git
+[submodule "node_modules/feather2-packager-map"]
+	path = node_modules/feather2-packager-map
+	url = https://github.com/feather-team/feather2-packager-map.git
