--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "feather2-deploy-default": "~1.0.0",
     "feather2-packager-map": "~1.0.0",
     "feather2-postprocessor-analyse": "~1.0.0",
+    "fis-command-install": "^0.2.17",
     "fis-parser-less": "^0.1.3",
     "fis3": "3.3.30",
+    "fis3-command-install": "^1.0.2",
     "fis3-deploy-ftp-umu": "^0.1.7",
     "liftoff": "^2.2.0",
     "minimist": "^1.2.0"
