--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "node_modules/feather2-packager-map"]
 	path = node_modules/feather2-packager-map
 	url = https://github.com/feather-team/feather2-packager-map.git
+[submodule "node_modules/feather2-preprocessor-label-analyse"]
+	path = node_modules/feather2-preprocessor-label-analyse
+	url = https://github.com/feather-team/feather2-preprocessor-label-analyse.git
