--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "node_modules/feather2-preprocessor-label-analyse"]
 	path = node_modules/feather2-preprocessor-label-analyse
 	url = https://github.com/feather-team/feather2-preprocessor-label-analyse.git
+[submodule "node_modules/feather2-command-install"]
+	path = node_modules/feather2-command-install
+	url = https://github.com/feather-team/feather2-command-install.git
