--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "node_modules/feather2-server-node"]
 	path = node_modules/feather2-server-node
 	url = https://github.com/feather-team/feather2-server-node.git
+[submodule "node_modules/feather2-hook-components"]
+	path = node_modules/feather2-hook-components
+	url = https://github.com/feather-team/feather2-hook-components.git
