--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feather2",
-  "version": "0.2.2",
+  "version": "2.0.0",
   "description": "feather2.0",
   "main": "index.js",
   "bin": {
@@ -18,6 +18,7 @@
   "dependencies": {
     "feather-optimizer-htmlmin": "^0.1.2",
     "feather-postprocessor-inline-compress": "~1.0.0",
+    "feather2-command-init": "^1.1.0",
     "feather2-deploy-default": "~1.0.0",
     "fis-parser-less": "^0.1.3",
     "fis3": "3.3.30",
